--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "codex-team/editor.js": "dev-master",
-        "illuminate/support": "^6|^7|^8"
+        "illuminate/support": "^6|^7|^8|^9"
     },
     "authors": [
         {
@@ -19,7 +19,7 @@
             "Ankitech\\LaravelEditorjsHtml\\": "src/"
         }
     },
-    "extra": { 
+    "extra": {
         "branch-alias": {
             "dev-master": "1.0-dev"
         }
